traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:44: error: Unmatched closing brace '}' ignored here
}
^